--- a/text.ipynb
+++ b/text.ipynb
@@ -534,6 +534,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "2 x 2 = 4\n",
+      "3 x 3 = 9\n",
+      "4 x 4 = 16\n",
+      "5 x 5 = 25\n",
+      "6 x 6 = 36\n",
+      "7 x 7 = 49\n",
+      "8 x 8 = 64\n",
+      "9 x 9 = 81\n",
+      "10 x 10 = 100\n",
+      "11 x 11 = 121\n",
+      "12 x 12 = 144\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1, 13):\n",
+    "    print(x, \"x\",x ,\"=\", x*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [
@@ -735,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -830,8 +859,8 @@
       "you have withdrawn the amount\n",
       "your current balance is  500\n",
       "you have dopsited your amount\n",
-      "your current balance is 1500\n",
-      "your balance is  1500\n"
+      "your current balance is 800\n",
+      "your balance is  800\n"
      ]
     }
    ],
